--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "/usr/bin/python",
+    "python.pythonPath": "C:\\Users\\Pc\\Anaconda3\\envs\\python27\\python.exe",
     "python.linting.enabled": false
 }
